log/build_2026-05-24_15-21-51/macademia_nav/stderr.log
  File "/home/rmitaiil/macademia_nav/install/macademia_nav/lib/python3.12/site-packages/macademia_nav/mock_scan_publisher.py", line 22
    .angle_increment = 6.28 / 360
    ^
SyntaxError: invalid syntax

